--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "j308537xoy",
-  "description": null,
+  "name": "nice-title",
+  "description": "We finally have a description for this sandbox, it's high time!",
   "version": "0.0.0",
   "dependencies": {
     "react-dom": "15.4.2",
@@ -14,5 +14,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "keywords": []
 }
